2006-01-12  Prakash Punnoor <prakash@punnoor.de>

	* src/extensions/al_ext_vorbis.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_arts.c, src/backends/alc_backend_esd.c,
	src/backends/alc_backend_sdl.c: #if -> #ifdef
	
	* CMakeLists.txt: improve defines handling
	
	* Makefile.am: fix (I hope) for SUBDIRS problem (with older automake?)

2006-01-11  Prakash Punnoor <prakash@punnoor.de>

	* src/al_siteconfig.h: #if -> #ifdef
	
	* CMakeLists.txt: test for __attribute__(...)

2006-01-11  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c: More steps towards a sane backend API.

	* configure.ac, src/al_buffer.c, src/al_config.c, src/al_debug.c,
	src/al_debug.h, src/al_error.c, src/al_ext.c, src/al_filter.c,
	src/al_main.h, src/al_mixer.c, src/al_mspool.c, src/al_rcvar.c,
	src/al_siteconfig.h, src/al_source.c, src/al_threadlib.c,
	src/al_threadlib.h, src/alc/alc_context.c, src/alc/alc_error.c,
	src/audioconvert/ac_misc.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_darwin.c, src/backends/alc_backend_linux.c,
	src/backends/alc_backend_wave.c, src/extensions/al_ext_mp3.c: Fixed tons
	of warnings. Fixed a bug in _alGetGlobalScalar on the way.

	* admin/autotools/m4/alut_c__attribute.m4: Added.

	* configure.ac: Added flags to dynamically load SDL, Vorbis and MP3 libs
	(enabled by default). Fixed a cut-n-paste typo in the handling of
	--enable-more-warnings.

2006-01-10  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Only use -finline-functions, -ffast-math and
	-fomit-frame-pointer for optimized build. Test the availability of these
	options with ALUT_CHECK_FLAG. Note that -O2 is used by default for GCC.

	* CMakeLists.txt, config-osx.h, configure.ac: Removed EMPTY_LOCKS
	remainders.

	* configure.ac: Synched --enable-more-warnings handling with ALUT. Use
	ALUT_CHECK_FLAG for symbol visibility support detection.
