@@ -1,0 +1,3 @@
+# kludge for nasm vs. automake-1.8
+
+SUBDIRS = i386
